--- a/html/exercises/index.html
+++ b/html/exercises/index.html
@@ -8,9 +8,9 @@
     <!-- DON'T TOUCH ANYTHING ABOVE THIS LINE -->
   </head>
   <body>
-    <!-- h1 goes here -->
-    <!-- ol goes here -->
-    <!-- a goes here -->
-    <!-- p goes here -->
+    <h1>Why I Love Web Development</h1>
+    <ol><li>It's fun!</li><li>It's challenging!</li><li>It's rewarding!</li></ol>
+    <a href="https://education.launchcode.org/intro-to-web-dev-curriculum/html/exercises/index.html">Exercise Page</a>
+    <p>I one day would like to make my own website holding an interactive CV and portfolio for myself and all the projects I hope to make!</p>
   </body>
 </html>
