--- a/user-input-with-forms/exercises/index.html
+++ b/user-input-with-forms/exercises/index.html
@@ -1,14 +1,70 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Rocket Simulation</title>
     <style>
-      label { display: block; margin-bottom: 7px;}
+      label {
+        display: block;
+        margin-bottom: 7px;
+      }
     </style>
+    <script src="script.js"></script>
   </head>
   <body>
-    <!-- TODO: add form here -->
+    <form
+      action="https://handlers.education.launchcode.org/request-parrot"
+      method="post"
+    >
+      <label
+        >Test Name<input type="text" name="testName" id="testName"
+      /></label>
+      <label
+        >Test Date <input type="date" name="testDate" id="testDate"
+      /></label>
+      <label
+        >Rocket Type
+        <select name="rocketType" id="rocketType">
+          <option value="">Select One</option>
+          <option value="Brant">Brant</option>
+          <option value="Lynx">Lynx</option>
+          <option value="Orion">Orion</option>
+          <option value="Terrier">Terrier</option>
+        </select>
+      </label>
+      <label
+        >Number of Rocket Boosters<input
+          type="number"
+          min="1"
+          max="10"
+          name="boosterCount"
+          id="boosterCount"
+      /></label>
+      <div>
+        <label>Wind Rating:</label>
+        <label
+          >No Wind<input
+            type="radio"
+            name="windRating"
+            value="0"
+            id="windRating"
+        /></label>
+        <label
+          >Mild<input type="radio" name="windRating" value="10" id="windRating"
+        /></label>
+        <label
+          >Strong<input
+            type="radio"
+            name="windRating"
+            value="20"
+            id="windRating"
+        /></label>
+      </div>
+      <label
+        >Use production grade servers
+        <input type="checkbox" name="productionServers"
+      /></label>
+      <button id="submit">Run Simulation</button>
+    </form>
   </body>
-  
 </html>
