--- a/user-input-with-forms/studio/index.html
+++ b/user-input-with-forms/studio/index.html
@@ -1,19 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <head>
-	<meta charset="utf-8">
-	<script>
-		// TODO: create a handler
-    window.addEventListener("load", function(){
-        // TODO: register the handler
-    });
-	</script>
+    <meta charset="utf-8" />
+    <script>
+        // TODO: create a handler
+
+        window.addEventListener("load", function () {
+            let searchForm = document.getElementById("searchForm");
+            let button = document.getElementById("button");
+
+            let actions = {
+                google: "https://www.google.com/",
+                duckDuckGo: "https://duckduckgo.com/",
+                bing: "https://www.bing.com/",
+                ask: "https://www.ask.com/",
+            };
+            function setSearchEngine() {
+                let engineSelected = document.querySelector("input[name=engine]:checked");
+                searchForm.setAttribute("action", actions[engineSelected.value]);
+            }
+            button.addEventListener("click", () => {
+                setSearchEngine();
+            });
+        });
+    </script>
 </head>
 
 <body>
-
-	<form id="searchForm">
-    <!-- TODO: add form elements -->
-	</form>
-
+    <form id="searchForm">
+        <input type="text" name="q" />
+        <label><input type="radio" name="engine" value="google" />Google</label>
+        <label><input type="radio" name="engine" value="duckDuckGo" />DuckDuckGo</label>
+        <label><input type="radio" name="engine" value="bing" />Bing</label>
+        <label><input type="radio" name="engine" value="ask" />Ask</label>
+        <button id="button">Go!</button>
+    </form>
 </body>
